# ProximaAI

./: .gitignore  README.md  langgraph.json  main.py  package-lock.json  pyproject.toml
examples/: tool_demo.py
react-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
react-ui/src/: AboutPage.jsx  App.css  App.jsx  BlurText.jsx  ChromaGrid.css  Dock.css  Dock.jsx  LandingPage.css  LandingPage.jsx  ShinyText.jsx  index.css
react-ui/src/auth/: Authentication.jsx
react-ui/src/components/: README.md  SignOutButton.jsx
react-ui/src/pages/: AppAssistant.jsx  AppAssistant.tsx  ApplicationAssistant.tsx  WelcomePage.jsx
react-ui/src/providers/: Credits.tsx
react-ui/src/styling/: AppAssistant.css
src/proximaai/agents/: constructor.py  designer.py  resume_parsing_agent.py  websearch_agent.py
src/proximaai/auth/: README.md  middleware.py
src/proximaai/mcp/: README.md  langchain_mcp_transform.py  llama_parse_server.py  math_server.py  mcp_client.py  ppl-mcp-server.py  server.py  server_connections.py
src/proximaai/orchestrator/: README.md  main_agent.py
src/proximaai/prebuilt/: prompt_templates.py
src/proximaai/tools/: README.md  __init__.py  agent_builder.py  career_coaching.py  (+5 more)
src/tests/: test_logging.py
supabase/: README.md
supabase/configuration/: email_confirmation.html
supabase/policies/: security.sql
supabase/scripts/: control_credit_spend.sql  set_trigger_on_auth.sql  user_credit_tracker.sql  user_credit_trigger_function.sql
terraform/: README.md  main.tf  terraform.tfstate  terraform.tfstate.backup
(+11 files in other folders)
