[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proximaai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "jinja2>=3.1.6",
    "langchain-mcp-adapters>=0.1.8",
    "langchain[anthropic]>=0.3.26",
    "langgraph>=0.4.9",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langgraph-cli[inmem]>=0.3.3",
    "langmem>=0.0.27",
    "mcp[cli]>=1.9.4",
    "supabase>=2.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/proximaai"]
